--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
             <ul class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-center" style="width:65%;  margin:auto; ">
                 Front end development
-                <span class="badge badge-warning badge-pill">80%</span>
+                <span class="badge badge-warning badge-pill"></span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center" style="width:65%;  margin:auto; ">
                 Content creating
-                <span class="badge badge-warning badge-pill">60%</span>
+                <span class="badge badge-warning badge-pill"></span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center" style="width:65%;  margin:auto;">
                 DS. Algo. in C++
-                <span class="badge badge-warning badge-pill">40%</span>
+                <span class="badge badge-warning badge-pill"></span>
               </li>
             </ul>
 
@@ -201,15 +201,15 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center" style="width:65%;  margin:auto; ">
                   Sudoku
-                  <span class="badge badge-warning badge-pill">35%</span>
+                  <span class="badge badge-warning badge-pill"></span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center" style="width:65%;  margin:auto; ">
                   Making cool frontends for websites
-                  <span class="badge badge-warning badge-pill">90%</span>
+                  <span class="badge badge-warning badge-pill"></span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center" style="width:65%;  margin:auto; " >
                   Watching football
-                  <span class="badge badge-warning badge-pill">40%</span>
+                  <span class="badge badge-warning badge-pill"></span>
                 </li>
               </ul>
             </div>
@@ -226,15 +226,15 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center" style="width:80%;  margin:auto; ">
                   Network security
-                  <span class="badge badge-warning badge-pill">70%</span>
+                  <span class="badge badge-warning badge-pill"></span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center" style="width:80%;  margin:auto; ">
                   Grip over backend development
-                  <span class="badge badge-warning badge-pill">60%</span>
+                  <span class="badge badge-warning badge-pill"></span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center" style="width:80%;  margin:auto; ">
                   Machine-learning
-                  <span class="badge badge-warning badge-pill">20%</span>
+                  <span class="badge badge-warning badge-pill"></span>
                 </li>
               </ul>
             </div>
